# openexr_viewer

./: .gitignore  LICENSE  README.md  download_convert_rgb_depth_exr.py  eslint.config.js  generate_colormap.py  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
app/: index.html
e2e/: app-shell.spec.ts  channels-display.spec.ts  embed-page.spec.ts  embed.spec.ts  navigation.spec.ts  project-page.spec.ts  settings-layout.spec.ts  smoke.spec.ts  stokes.spec.ts  thumbnails.spec.ts  viewer-interaction.spec.ts  viewer-split.spec.ts
embed/: index.html
public/: cbox_rgb.exr
scripts/: build-windows-thumbnail-provider.mjs  capture-project-page-screenshots.mjs  capture-thumbnail.mjs  report-playwright-timing.mjs  stage-desktop-assets.mjs  stage-vscode-assets.mjs  verify-vscode-assets.mjs
src/: async-resource.ts  auto-exposure.ts  channel-recognition-name-rules.ts  channel-storage.ts  channel-thumbnail-keys.ts  channel-view-items.ts  color.ts  colormap-range.ts  colormaps.ts  decode-transferables.ts  depth-point-budget.ts  display-cache.ts  display-model.ts  display-selection.ts  display-texture.ts  export-image.ts  exr-decode-context.ts  exr-metadata.ts  exr-runtime.ts  exr-worker-client.ts  exr-worker.ts  exr.ts  folder-load-limits.ts  interaction-coordinator.ts  interaction.ts  lifecycle.ts  main.ts  probe.ts  project-page.css  project-page.ts  renderer.ts  roi.ts  (+16 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/windows/: exr-thumbnail-provider.nsh  exr-thumbnail-provider.wxs
(+241 files in other folders)
