[package]
name = "openexr-viewer-desktop"
version = "0.1.0"
description = "Standalone desktop shell for OpenEXR Viewer"
authors = ["Ryota Maeda"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "openexr_viewer_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
